# AI-Resume-Analyzer

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  test_config.py
.github/workflows/: ci.yml
src/ai_resume_analyzer/: __init__.py  main.py
src/ai_resume_analyzer/api/: __init__.py
src/ai_resume_analyzer/api/routes/: __init__.py  health.py  resume.py
src/ai_resume_analyzer/config/: settings.py
src/ai_resume_analyzer/core/: config.py  constants.py  file_validator.py  settings.py
src/ai_resume_analyzer/exceptions/: __init__.py  base.py  document.py  file.py  handlers.py
src/ai_resume_analyzer/schemas/: __init__.py  parsed_resume.py  resume.py
src/ai_resume_analyzer/services/: __init__.py  ats_service.py  document_extraction_service.py  parser_service.py  resume_service.py
src/ai_resume_analyzer/services/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py
src/ai_resume_analyzer/static/css/: base.css  layout.css  typography.css  variables.css
src/ai_resume_analyzer/static/css/components/: buttons.css  cards.css
src/ai_resume_analyzer/static/css/pages/: index.css  result.css  upload.css
src/ai_resume_analyzer/static/js/: app.js  upload.js
src/ai_resume_analyzer/templates/: base.html  index.html
src/ai_resume_analyzer/templates/errors/: 404.html
src/ai_resume_analyzer/templates/partials/: flash_messages.html  footer.html  navbar.html
src/ai_resume_analyzer/templates/resume/: result.html  upload.html
src/ai_resume_analyzer/ui/: routes.py
tests/: conftest.py  test_file_validator.py  test_health_api.py  test_pdf_extractor.py  test_resume_api.py  test_resume_service.py
